--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".ProfileFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="130dp"
@@ -13,7 +18,8 @@
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_profile_image" />
 
-    <TextView
+    <EditText
+        android:background="#00ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -145,5 +151,5 @@
         android:layout_height="1dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/bg_line" />
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
